test/spec_vectors/unreached-invalid/fail/module_4.wat
(module (func $type-num-vs-num (unreachable) (drop (i64.eqz (i32.const 0)))))